hphp/hack/test/deregister/test_class.php.exp
File "test_class.php", line 11, characters 13-19:
Unbound name: Ignored (an object type) (Naming[2049])
